--- a/playbooks/lemp.yml
+++ b/playbooks/lemp.yml
@@ -72,12 +72,6 @@
                        line: <?php phpinfo(); ?>
                        create: yes
 
-             - name: "print 'sudo mysql -u root -p' to stdout"
-               command: echo "You should manually run '# sudo -u root -p' to set MySQL root password"
-               register: hello
-
-             - debug: msg = "{{ hello.stdout }}"
-
              - name: "Update apt cache"
                apt:
                        force_apt_get: true
@@ -113,6 +107,14 @@
                                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                                proxy_set_header X-Forwarded-Proto $scheme;
                                proxy_set_header X-Server-Address  $server_addr;
+
+             - name: "Correct 404 Error while trying .php files"
+               ansible.builtin.lineinfile:
+                       path: /etc/nginx/sites-enabled/default
+                       #search_string: '*try*'
+                       regexp: "try" #files \\$uri \\$uri\/ =404\\;"
+                       #regex: 'try\_files \$uri \$uri\/ \=404\;'
+                       line: '# Congratulations!!!'
 
              - name: "Starting and enabling nginx web-server"
                systemd:
