--- a/playbooks/letsencrypt-issue.yml
+++ b/playbooks/letsencrypt-issue.yml
@@ -49,7 +49,7 @@
                        dest: "{{ letsencrypt_certs_dir }}/{{ domain_name }}.crt"
                        fullchain_dest: "{{ letsencrypt_certs_dir }}/fullchain_{{ domain_name }}.crt"
                        remaining_days: 91
-               register: acmechallenge15816049101nipio
+               register: acmechallenge15816032104nipio
 
              - name: "Create .well-known/acme-challenge directory"
                file:
@@ -61,8 +61,8 @@
 
              - name: "Implement http-01 challenge files"
                copy:
-                       content: "{{ acmechallenge15816049101nipio['challenge_data'][item]['http-01']['resource_value'] }}"
-                       dest: "/var/www/html/{{ acmechallenge15816049101nipio['challenge_data'][item]['http-01']['resource'] }}"
+                       content: "{{ acmechallenge15816032104nipio['challenge_data'][item]['http-01']['resource_value'] }}"
+                       dest: "/var/www/html/{{ acmechallenge15816032104nipio['challenge_data'][item]['http-01']['resource'] }}"
                        owner: root
                        group: root
                        mode: u=rw,g=r,o=r
@@ -82,4 +82,7 @@
                        dest: "{{ letsencrypt_certs_dir }}/{{ domain_name }}.crt"
                        chain_dest: "{{ letsencrypt_certs_dir }}/chain_{{ domain_name }}.crt"
                        fullchain_dest: "{{ letsencrypt_certs_dir }}/fullchain_{{ domain_name }}"
-                       data: "{{ acmechallenge15816049101nipio }}"
+                       data: "{{ acmechallenge15816032104nipio }}"
+                       #- name: "Print out domain name"
+                       #ansible.builtin.debug:
+                       #msg: Domain name is {{ domain_name }}
