--- a/playbooks/get-LE-SSL-cert.yml
+++ b/playbooks/get-LE-SSL-cert.yml
@@ -12,6 +12,16 @@
                        state: present
                        install-recommends: yes
 
+             - name: "Fixing error 'dict object' by recursively removing unnecessary directories from /etc/letsencrypt/"
+               ansible.builtin.file:
+                       path: "/etc/letsencrypt/{{ item }}"
+                       state: absent
+               with_items:
+                       - account
+                       - certs
+                       - csrs
+                       - keys
+
              - name: "Create required directories in /etc/letsencrypt"
                file:
                        path: "/etc/letsencrypt/{{ item }}"
@@ -26,13 +36,17 @@
                        - keys
 
              - name: "Generate a Let's Encrypt account key"
-               shell: "if [ ! -f {{ letsencrypt_account_key }} ]; then openssl genrsa 4096 | sudo tee {{ letsencrypt_account_key }}; fi"
+               shell: "if [ ! -f {{ letsencrypt_account_key }} ]; then openssl genrsa 4096 | tee {{ letsencrypt_account_key }}; fi"
+               args:
+                       executable: /bin/bash
 
              - name: "Generate Let's Encrypt private key"
-               shell: "openssl genrsa 4096 | sudo tee /etc/letsencrypt/keys/{{ domain_name }}.key"
+               shell: "openssl genrsa 4096 | tee /etc/letsencrypt/keys/{{ domain_name }}.key"
+               args:
+                       executable: /bin/bash
 
              - name: "Generate Let's Encrypt CSR"
-               shell: "openssl req -new -sha256 -key /etc/letsencrypt/keys/{{ domain_name }}.key -subj \"/CN={{ domain_name }}\" -reqexts SAN -config <(cat /etc/ssl/openssl.cnf <(printf \"\n[SAN]\nsubjectAltName=DNS:{{ domain_name }},DNS:www.{{ domain_name }}\")) | sudo tee /etc/letsencrypt/csrs/{{ domain_name }}.csr"
+               shell: "openssl req -new -sha256 -key /etc/letsencrypt/keys/{{ domain_name }}.key -subj \"/CN={{ domain_name }}\" -reqexts SAN -config <(cat /etc/ssl/openssl.cnf <(printf \"\n[SAN]\nsubjectAltName=DNS:{{ domain_name }},DNS:www.{{ domain_name }}\")) | tee /etc/letsencrypt/csrs/{{ domain_name }}.csr"
                args:
                        executable: /bin/bash
 
@@ -49,7 +63,7 @@
                        dest: "{{ letsencrypt_certs_dir }}/{{ domain_name }}.crt"
                        fullchain_dest: "{{ letsencrypt_certs_dir }}/fullchain_{{ domain_name }}.crt"
                        remaining_days: 91
-               register: acmechallenge15816032104nipio
+               register: acmechallenge15816096243nipio
 
              - name: "Create .well-known/acme-challenge directory"
                file:
@@ -61,8 +75,8 @@
 
              - name: "Implement http-01 challenge files"
                copy:
-                       content: "{{ acmechallenge15816032104nipio['challenge_data'][item]['http-01']['resource_value'] }}"
-                       dest: "/var/www/html/{{ acmechallenge15816032104nipio['challenge_data'][item]['http-01']['resource'] }}"
+                       content: "{{ acmechallenge15816096243nipio['challenge_data'][item]['http-01']['resource_value'] }}"
+                       dest: "/var/www/html/{{ acmechallenge15816096243nipio['challenge_data'][item]['http-01']['resource'] }}"
                        owner: root
                        group: root
                        mode: u=rw,g=r,o=r
@@ -82,4 +96,4 @@
                        dest: "{{ letsencrypt_certs_dir }}/{{ domain_name }}.crt"
                        chain_dest: "{{ letsencrypt_certs_dir }}/chain_{{ domain_name }}.crt"
                        fullchain_dest: "{{ letsencrypt_certs_dir }}/fullchain_{{ domain_name }}"
-                       data: "{{ acmechallenge15816032104nipio }}"
+                       data: "{{ acmechallenge15816096243nipio }}"
