--- a/playbooks/install-zabbix-agent.yml
+++ b/playbooks/install-zabbix-agent.yml
@@ -9,16 +9,16 @@
                  dest: /root/zabbix-release_6.0-4+ubuntu20.04_all.deb
                  mode: 0644
 
-       - name: "Ubuntu install zabbix repository"
+       - name: "Install zabbix repository"
          apt: deb="/root/zabbix-release_6.0-4+ubuntu20.04_all.deb"
 
-       - name: "Ubuntu install zabbix-agent 6.0"
+       - name: "Ubuntu install packages needed for zabbix agent 6.0.18"
          apt:
                  update_cache: true
                  cache_valid_time: 86400
                  force_apt_get: true
                  name:
-                         - zabbix-agent
+                         - libmodbus5
                  state: present
                  install-recommends: yes
 
@@ -39,12 +39,20 @@
                  insertafter: 'PidFile'
                  state: present
                  block: |
+                         PidFile=/run/zabbix/zabbix_agentd.pid
                          LogFile=/var/log/zabbix/zabbix_agentd.log
                          LogFileSize=0
-                         Server=172.16.168.10
-                         ServerActive=172.16.168.10
-                         Hostname=system.uname
+                         Server=172.16.168.1
                          Include=/etc/zabbix/zabbix_agentd.d/*.conf
+                         HostMetadata=77444dd16879ca68d6665d7fe55fece2
+
+       - name: "Download zabbix agent 6.0.18 deb package"
+         ansible.builtin.get_url:
+                 url: https://repo.zabbix.com/zabbix/6.0/ubuntu/pool/main/z/zabbix/zabbix-agent_6.0.18-1%2Bubuntu20.04_amd64.deb
+                 dest: /root/zabbix-agent_6.0.18-ubuntu20.04_amd64.deb
+
+       - name: "Install zabbix agent 6.0.18"
+         apt: deb="/root/zabbix-agent_6.0.18-ubuntu20.04_amd64.deb"
 
        - name: zabbix-agent systemd
          systemd:
