--- a/playbooks/lemp-apply-LE-SSL-cert.yml
+++ b/playbooks/lemp-apply-LE-SSL-cert.yml
@@ -25,6 +25,7 @@
                                listen 443 ssl default_server; # managed by Certbot
                                ssl_certificate /etc/letsencrypt/certs/fullchain_{{ domain_name }}; # managed by Certbot
                                ssl_certificate_key /etc/letsencrypt/keys/{{ domain_name }}.key; # managed by Certbot
+                               server_name www.{{ domain_name }} {{ domain_name }};
                                location / { proxy_pass http://127.0.0.1:8080;
                                         proxy_set_header Host $host;
                                         proxy_set_header X-Real-IP $remote_addr;
